syntax = "proto3";
package ubii.proto_baseline.sessions;

import "ubii/proto_baseline/sessions/ioMappings.proto";
import "ubii/proto_baseline/processing/processingModule.proto";

enum SessionStatus {
    CREATED = 0;
    RUNNING = 1;
    PAUSED = 2;
    STOPPED = 3;
}

message Session {
    string id = 1;
    string name = 2;
    repeated ubii.proto_baseline.processing.ProcessingModule processing_modules = 3;
    repeated ubii.proto_baseline.sessions.IOMapping io_mappings = 4;
    repeated string tags = 5;
    string description = 6;
    repeated string authors = 7;
    SessionStatus status = 8;
    bool editable = 9;
}

message SessionList {
    repeated ubii.proto_baseline.sessions.Session elements = 1;
}
