syntax = "proto3";
package ubii.proto_baseline.topicData;

import "ubii/proto_baseline/topicData/topicDataRecord.proto";
import "ubii/proto_baseline/general/error.proto";

message TopicData {
    oneof type {
        ubii.proto_baseline.topicData.TopicDataRecord topic_data_record = 2;
        ubii.proto_baseline.topicData.TopicDataRecordList topic_data_record_list = 3;
        ubii.proto_baseline.general.Error error = 4;
    }
}
